--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Painteract</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;1,100&display=swap" rel="stylesheet">
     <style>
       body {
         background: black;
@@ -32,6 +35,18 @@
       #loadingFill.error {
         filter: sepia(100%) saturate(200%) brightness(70%) hue-rotate(330deg);
       }
+      #loadingText {
+        display: inline-block;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: white;
+        font-family: Roboto, sans-serif;
+        font-style: italic;
+        font-weight: 100;
+        font-size: 3em;
+      }
     </style>
   </head>
   <body style="text-align: center">
@@ -39,6 +54,7 @@
     <canvas id="canvas" style="width: 100%; height: 100%; background: black"></canvas>
     <div id="loadingBar">
       <div id="loadingFill"></div>
+        <div id="loadingText"></div>
     </div>
 
     <script src="Build/Build.loader.js"></script>
@@ -62,8 +78,9 @@
         productVersion: "0.1",
         // matchWebGLToCanvasSize: false, // Uncomment this to separately control WebGL canvas render size and DOM element size.
         // devicePixelRatio: 1, // Uncomment this to override low DPI rendering on high DPI displays.
-      }, prg => {
+      }, (prg) => {
         loadingFill.style.height = prg * 100 + "%";
+        loadingText.textContent = (prg * 100).toFixed(2) + "%";
       }).then((unityInstance) => {
         setTimeout(() => { loadingBar.style.display = "none" }, 2000);
       }).catch((error) => { loadingFill.classList.add("error") });
